--- a/index.ipynb
+++ b/index.ipynb
@@ -107,6 +107,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "data = json.load(open('./public/classes.json'))\n",
+    "\n",
+    "cnames = {\n",
+    "    'Statics' : 'sta',\n",
+    "    'Dynamics' : 'dyn',\n",
+    "    'Solid Mechanics': 'sol'\n",
+    "}\n",
+    "\n",
+    "uh = {c: {} for k, c in cnames.items()}\n",
+    "\n",
+    "for course in data:\n",
+    "    pages = course[1]\n",
+    "\n",
+    "    for page in pages:\n",
+    "        uh[cnames[course[0]]][page['id']] = page['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sta': {'introduction': 'Introduction',\n",
+       "  'cartesian_coordinates': 'Cartesian Coordinates',\n",
+       "  'vectors_scalars': 'Vectors Scalars',\n",
+       "  'free_body_diagrams': 'Free Body Diagrams',\n",
+       "  'moments': 'Moments',\n",
+       "  'forcesystems': 'Force Systems',\n",
+       "  'reaction_forces': 'Reaction Forces',\n",
+       "  'internal_forces': 'Internal Forces',\n",
+       "  'trusses': 'Trusses',\n",
+       "  'friction': 'Friction',\n",
+       "  'centers_of_mass': 'Centers Of Mass',\n",
+       "  'hydrostatic_fluid_pressure': 'Hydrostatic Fluid Pressure',\n",
+       "  'moment_of_inertia': 'Moment Of Inertia',\n",
+       "  'virtual_work': 'Virtual Work'},\n",
+       " 'dyn': {'vectors': 'Vectors',\n",
+       "  'vector_calculus': 'Vector Calculus',\n",
+       "  'particle_kinematics': 'Particle Kinematics',\n",
+       "  'particle_kinetics': 'Particle Kinetics',\n",
+       "  'rigid_body_kinematics': 'Rigid Body Kinematics',\n",
+       "  'rigid_body_kinetics': 'Rigid Body Kinetics',\n",
+       "  'contact_and_rolling': 'Contact And Rolling',\n",
+       "  'work_and_energy': 'Work And Energy',\n",
+       "  'questions_to_ask_instructor': 'Questions To Ask Instructor'},\n",
+       " 'sol': {'stress': 'Stress',\n",
+       "  'strain': 'Strain',\n",
+       "  'material_properties': 'Material Properties',\n",
+       "  'axial_loading': 'Axial Loading',\n",
+       "  'torsion': 'Torsion',\n",
+       "  'shear_moment_diagrams': 'Shear Moment Diagrams',\n",
+       "  'bending': 'Bending',\n",
+       "  'transverse_shear': 'Transverse Shear',\n",
+       "  'pressure_vessels': 'Pressure Vessels',\n",
+       "  'combined_loading': 'Combined Loading',\n",
+       "  'stress_transformation': 'Stress Transformation',\n",
+       "  'failure_theories': 'Failure Theories',\n",
+       "  'beam_deflection': 'Beam Deflection',\n",
+       "  'buckling': 'Buckling'}}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uh"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -129,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
