--- a/cbtf.ipynb
+++ b/cbtf.ipynb
@@ -337,14 +337,17 @@
     "    \"href=\\\"/dyn/\": \"href=\\\"../dyn/\",\n",
     "    \"src=\\\"/sta/\": \"src=\\\"../sta/\",\n",
     "    \"src=\\\"/sol/\": \"src=\\\"../sol/\",\n",
-    "    \"src=\\\"/dyn/\": \"src=\\\"../dyn/\"\n",
+    "    \"src=\\\"/dyn/\": \"src=\\\"../dyn/\",\n",
+    "    \"src=\\\"/Statics/\": \"src=\\\"../Statics/\",\n",
+    "    \"src=\\\"/Solid_Mechanics/\": \"src=\\\"../Solid_Mechanics/\",\n",
+    "    \"src=\\\"/Dynamics/\": \"src=\\\"../Dynamics/\"\n",
     "}\n",
     "\n",
     "all_content_pages = os.listdir(os.path.join(home, 'sta')) + os.listdir(os.path.join(home, 'sol')) + os.listdir(os.path.join(home, 'dyn'))\n",
     "\n",
     "all_content_pages = [p for p in all_content_pages if p[-5:] == '.html']\n",
     "\n",
-    "hrefs ={p.replace('.html', ''): p for p in all_content_pages}\n",
+    "hrefs ={'/'+p.replace('.html', ''): '/'+p for p in all_content_pages}\n",
     "\n",
     "for dir in ['dyn', 'sta', 'sol']:\n",
     "    pages = [p for p in os.listdir(os.path.join(home, dir)) if p[-5:] == '.html']\n",
