Selective search feature
Search feature can now filter between classes

--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,8 @@
     "    \"sol/axial_loading\",\n",
     "    \"dyn/vectors\",\n",
     "    \"dyn/vector_calculus\",\n",
+    "    \"dyn/particle_kinetics\",\n",
+    "    'dyn/particle_kinematics',\n",
     "    \"sta/introduction\",\n",
     "    \"sta/cartesian_coordinates\",\n",
     "    \"sta/vectors_scalars\"\n",
@@ -51,15 +53,16 @@
     "\n",
     "    banned_strings = [\n",
     "        \"Derivation +\",\n",
-    "        \"Solution +\"\n",
+    "        \"Solution +\",\n",
+    "        \"All courses Statics Dynamics Solid Mechanics \"\n",
     "    ]\n",
     "\n",
     "    for b in banned_strings:    \n",
     "        text = text.replace(b, \"\")\n",
     "\n",
-    "    page_text.append({\"title\": page.split(\"/\")[1].replace(\"_\", \" \").capitalize(),\"text\": text, 'link': \"/\" + page})\n",
+    "    page_text.append({\"title\": page.split(\"/\")[1].replace(\"_\", \" \").capitalize(),\"text\": text, 'link': \"/\" + page, 'course': page.split('/')[0]})\n",
     "\n",
-    "json.dump(page_text, open(\"./public/search.json\", \"w\"), indent=2)"
+    "json.dump(page_text, open(\"./src/search.json\", \"w\"), indent=2)"
    ]
   },
   {
@@ -93,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
