--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -268,15 +268,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"365.242 \\\\approx 365 + \\\\frac{1}{4} - \\\\frac{1}{100} + \\\\frac{1}{400}.\" />\n"
+      "<DisplayEquation equation=\"\\\\begin{aligned}            \\\\vec{a}_P &amp;= \\\\vec{a}_C + \\\\vec{\\\\alpha} \\\\times \\\\vec{r}_{CP}            + \\\\vec{\\\\omega} \\\\times (\\\\vec{\\\\omega} \\\\times \\\\vec{r}_{CP}) \\\\\\\\            &amp;= \\\\alpha r \\\\,\\\\hat{e}_t + (-\\\\alpha\\\\,\\\\hat{e}_b) \\\\times (-r\\\\,\\\\hat{e}_n)            + (-\\\\omega\\\\,\\\\hat{e}_b) \\\\times \\\\Big((-\\\\omega\\\\,\\\\hat{e}_b) \\\\times (-r\\\\,\\\\hat{e}_n)\\\\Big) \\\\\\\\            &amp;= \\\\alpha r \\\\,\\\\hat{e}_t - \\\\alpha r \\\\,\\\\hat{e}_t            + \\\\omega^2 r \\\\,\\\\hat{e}_n \\\\\\\\            &amp;= \\\\omega^2 \\\\,\\\\vec{r}_{PC}.            \\\\end{aligned}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\n",
-    "365.242 \\approx 365 + \\frac{1}{4} - \\frac{1}{100} + \\frac{1}{400}.\n",
-    "\\]\n",
+    "\\[\\begin{aligned}\n",
+    "            \\vec{a}_P &amp;= \\vec{a}_C + \\vec{\\alpha} \\times \\vec{r}_{CP}\n",
+    "            + \\vec{\\omega} \\times (\\vec{\\omega} \\times \\vec{r}_{CP}) \\\\\n",
+    "            &amp;= \\alpha r \\,\\hat{e}_t + (-\\alpha\\,\\hat{e}_b) \\times (-r\\,\\hat{e}_n)\n",
+    "            + (-\\omega\\,\\hat{e}_b) \\times \\Big((-\\omega\\,\\hat{e}_b) \\times (-r\\,\\hat{e}_n)\\Big) \\\\\n",
+    "            &amp;= \\alpha r \\,\\hat{e}_t - \\alpha r \\,\\hat{e}_t\n",
+    "            + \\omega^2 r \\,\\hat{e}_n \\\\\n",
+    "            &amp;= \\omega^2 \\,\\vec{r}_{PC}.\n",
+    "            \\end{aligned}\\]\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -301,20 +307,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\"\\\\dot{\\\\vec{r}}\" />\n"
+      "<InlineEquation equation=\"\\\\hat{e}_t\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\dot{\\vec{r}}\n",
+    "$\\hat{e}_t$\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
@@ -354,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
