Particle kinematics "track curves" + fixes to images not showing in cbtf mode in DYnamics

--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -15,13 +15,14 @@
     "    \"sol/stress\",\n",
     "    \"sol/material_properties\",\n",
     "    \"sol/axial_loading\",\n",
+    "    \"sol/torsion\",\n",
     "    \"dyn/vectors\",\n",
     "    \"dyn/vector_calculus\",\n",
     "    \"dyn/particle_kinetics\",\n",
     "    'dyn/particle_kinematics',\n",
     "    \"sta/introduction\",\n",
     "    \"sta/cartesian_coordinates\",\n",
-    "    \"sta/vectors_scalars\"\n",
+    "    \"sta/vectors_scalars\",\n",
     "]\n",
     "\n",
     "page_text = []\n",
@@ -96,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
