--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,28 +261,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"\\\\begin{aligned}            \\\\vec{a}_P &amp;= \\\\vec{a}_C + \\\\vec{\\\\alpha} \\\\times \\\\vec{r}_{CP}            + \\\\vec{\\\\omega} \\\\times (\\\\vec{\\\\omega} \\\\times \\\\vec{r}_{CP}) \\\\\\\\            &amp;= \\\\alpha r \\\\,\\\\hat{e}_t + (-\\\\alpha\\\\,\\\\hat{e}_b) \\\\times (-r\\\\,\\\\hat{e}_n)            + (-\\\\omega\\\\,\\\\hat{e}_b) \\\\times \\\\Big((-\\\\omega\\\\,\\\\hat{e}_b) \\\\times (-r\\\\,\\\\hat{e}_n)\\\\Big) \\\\\\\\            &amp;= \\\\alpha r \\\\,\\\\hat{e}_t - \\\\alpha r \\\\,\\\\hat{e}_t            + \\\\omega^2 r \\\\,\\\\hat{e}_n \\\\\\\\            &amp;= \\\\omega^2 \\\\,\\\\vec{r}_{PC}.            \\\\end{aligned}\" />\n"
+      "<DisplayEquation equation=\" \\\\vec{a} =    \\\\ddot{s} \\\\, \\\\hat{e}_t + \\\\kappa v^2 \\\\, \\\\hat{e}_n. \" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\\begin{aligned}\n",
-    "            \\vec{a}_P &amp;= \\vec{a}_C + \\vec{\\alpha} \\times \\vec{r}_{CP}\n",
-    "            + \\vec{\\omega} \\times (\\vec{\\omega} \\times \\vec{r}_{CP}) \\\\\n",
-    "            &amp;= \\alpha r \\,\\hat{e}_t + (-\\alpha\\,\\hat{e}_b) \\times (-r\\,\\hat{e}_n)\n",
-    "            + (-\\omega\\,\\hat{e}_b) \\times \\Big((-\\omega\\,\\hat{e}_b) \\times (-r\\,\\hat{e}_n)\\Big) \\\\\n",
-    "            &amp;= \\alpha r \\,\\hat{e}_t - \\alpha r \\,\\hat{e}_t\n",
-    "            + \\omega^2 r \\,\\hat{e}_n \\\\\n",
-    "            &amp;= \\omega^2 \\,\\vec{r}_{PC}.\n",
-    "            \\end{aligned}\\]\n",
+    "\\[ \\vec{a} =\n",
+    "    \\ddot{s} \\, \\hat{e}_t + \\kappa v^2 \\, \\hat{e}_n. \\]\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -307,20 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\"\\\\hat{e}_t\" />\n"
+      "<InlineEquation equation=\" \\\\dot{s} = v = \\\\text{constant}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "$\\hat{e}_t$\n",
+    "$\\ddot{s} = 0$\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
@@ -360,7 +353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
