Fixed animation for drag particle kinetics

--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,21 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\" \\\\vec{a} =    \\\\ddot{s} \\\\, \\\\hat{e}_t + \\\\kappa v^2 \\\\, \\\\hat{e}_n. \" />\n"
+      "<DisplayEquation equation=\"      \\\\begin{aligned} \\\\vec{r} &amp;= \\\\int_0^t \\\\left(v      \\\\cos\\\\Big(\\\\frac{1}{2} \\\\alpha v^2 \\\\tau^2\\\\Big) \\\\,      \\\\hat{\\\\imath} + v \\\\sin\\\\Big(\\\\frac{1}{2} \\\\alpha v^2 \\\\tau^2      \\\\Big) \\\\, \\\\hat{\\\\jmath}\\\\right) d\\\\tau \\\\\\\\ &amp;= \\\\ell      \\\\int_0^{s/\\\\ell} \\\\left( \\\\cos\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big)      \\\\, \\\\hat{\\\\imath} + \\\\sin\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big) \\\\,      \\\\hat{\\\\jmath} \\\\right) du, \\\\end{aligned} \" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[ \\vec{a} =\n",
-    "    \\ddot{s} \\, \\hat{e}_t + \\kappa v^2 \\, \\hat{e}_n. \\]\n",
+    "\\[\n",
+    "      \\begin{aligned} \\vec{r} &amp;= \\int_0^t \\left(v\n",
+    "      \\cos\\Big(\\frac{1}{2} \\alpha v^2 \\tau^2\\Big) \\,\n",
+    "      \\hat{\\imath} + v \\sin\\Big(\\frac{1}{2} \\alpha v^2 \\tau^2\n",
+    "      \\Big) \\, \\hat{\\jmath}\\right) d\\tau \\\\ &amp;= \\ell\n",
+    "      \\int_0^{s/\\ell} \\left( \\cos\\Big(\\frac{1}{2} \\pi u^2\\Big)\n",
+    "      \\, \\hat{\\imath} + \\sin\\Big(\\frac{1}{2} \\pi u^2\\Big) \\,\n",
+    "      \\hat{\\jmath} \\right) du, \\end{aligned} \\]\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -283,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\\\kappa = \\\\frac{|y''(x)|}{(1 + y'(x)^2)^{3/2}}\n"
+      "\\\\begin{aligned}C(z) &amp;= \\\\int_0^z \\\\cos\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big) du \\\\\\\\S(z) &amp;= \\\\int_0^z \\\\sin\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big) du\\\\end{aligned}\n"
      ]
     }
    ],
@@ -300,20 +306,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\" \\\\dot{s} = v = \\\\text{constant}\" />\n"
+      "<InlineEquation equation=\"s = vt\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "$\\ddot{s} = 0$\n",
+    "$s = vt$\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
