Added osculating circle stuff

--- a/dev_tools/html_to_astro.ipynb
+++ b/dev_tools/html_to_astro.ipynb
@@ -261,27 +261,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<DisplayEquation equation=\"      \\\\begin{aligned} \\\\vec{r} &amp;= \\\\int_0^t \\\\left(v      \\\\cos\\\\Big(\\\\frac{1}{2} \\\\alpha v^2 \\\\tau^2\\\\Big) \\\\,      \\\\hat{\\\\imath} + v \\\\sin\\\\Big(\\\\frac{1}{2} \\\\alpha v^2 \\\\tau^2      \\\\Big) \\\\, \\\\hat{\\\\jmath}\\\\right) d\\\\tau \\\\\\\\ &amp;= \\\\ell      \\\\int_0^{s/\\\\ell} \\\\left( \\\\cos\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big)      \\\\, \\\\hat{\\\\imath} + \\\\sin\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big) \\\\,      \\\\hat{\\\\jmath} \\\\right) du, \\\\end{aligned} \" />\n"
+      "<DisplayEquation equation=\"\\\\begin{aligned}  \\\\vec{a}_Q &amp;= -\\\\frac{v_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\rho_Q \\\\alpha_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= -\\\\frac{\\\\dot{s}_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= \\\\frac{\\\\dot{s}_P^2}{\\\\rho_P} \\\\,\\\\hat{e}_n  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_t \\\\\\\\  &amp;= \\\\vec{a}_Q.  \\\\end{aligned}\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "\\[\n",
-    "      \\begin{aligned} \\vec{r} &amp;= \\int_0^t \\left(v\n",
-    "      \\cos\\Big(\\frac{1}{2} \\alpha v^2 \\tau^2\\Big) \\,\n",
-    "      \\hat{\\imath} + v \\sin\\Big(\\frac{1}{2} \\alpha v^2 \\tau^2\n",
-    "      \\Big) \\, \\hat{\\jmath}\\right) d\\tau \\\\ &amp;= \\ell\n",
-    "      \\int_0^{s/\\ell} \\left( \\cos\\Big(\\frac{1}{2} \\pi u^2\\Big)\n",
-    "      \\, \\hat{\\imath} + \\sin\\Big(\\frac{1}{2} \\pi u^2\\Big) \\,\n",
-    "      \\hat{\\jmath} \\right) du, \\end{aligned} \\]\n",
+    "\\[\\begin{aligned}\n",
+    "  \\vec{a}_Q &amp;= -\\frac{v_Q^2}{\\rho_Q} \\,\\hat{e}_r\n",
+    "  + \\rho_Q \\alpha_Q \\,\\hat{e}_\\theta \\\\\n",
+    "  &amp;= -\\frac{\\dot{s}_Q^2}{\\rho_Q} \\,\\hat{e}_r\n",
+    "  + \\ddot{s}_Q \\,\\hat{e}_\\theta \\\\\n",
+    "  &amp;= \\frac{\\dot{s}_P^2}{\\rho_P} \\,\\hat{e}_n\n",
+    "  + \\ddot{s}_Q \\,\\hat{e}_t \\\\\n",
+    "  &amp;= \\vec{a}_Q.\n",
+    "  \\end{aligned}\\]\n",
     "\"\"\"\n",
     "\n",
     "print(\"<DisplayEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\[', '').replace(r'\\]', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")\n"
@@ -289,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\\\\begin{aligned}C(z) &amp;= \\\\int_0^z \\\\cos\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big) du \\\\\\\\S(z) &amp;= \\\\int_0^z \\\\sin\\\\Big(\\\\frac{1}{2} \\\\pi u^2\\\\Big) du\\\\end{aligned}\n"
+      "\\\\begin{aligned}  \\\\vec{a}_Q &amp;= -\\\\frac{v_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\rho_Q \\\\alpha_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= -\\\\frac{\\\\dot{s}_Q^2}{\\\\rho_Q} \\\\,\\\\hat{e}_r  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_\\\\theta \\\\\\\\  &amp;= \\\\frac{\\\\dot{s}_P^2}{\\\\rho_P} \\\\,\\\\hat{e}_n  + \\\\ddot{s}_Q \\\\,\\\\hat{e}_t \\\\\\\\  &amp;= \\\\vec{a}_Q.  \\\\end{aligned}\n"
      ]
     }
    ],
@@ -306,24 +307,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<InlineEquation equation=\"s = vt\" />\n"
+      "<InlineEquation equation=\"  \\\\hat{e}_b.\" />\n"
      ]
     }
    ],
    "source": [
     "e = r\"\"\"\n",
-    "$s = vt$\n",
+    "  $\\hat{e}_b$.\n",
     "\"\"\"\n",
     "\n",
     "print(\"<InlineEquation equation=\\\"\" + e.replace('\\n', '').replace('              ', '').replace('$', '').replace(r'\\(', '').replace(r'\\)', '').replace(\"\\\\\", r\"\\\\\") + \"\\\" />\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
