updated search index

--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -2,9 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sol/strain\n",
+      "sol/stress\n",
+      "sol/material_properties\n",
+      "sol/axial_loading\n",
+      "sol/torsion\n",
+      "sol/shear_moment_diagrams\n",
+      "sol/bending\n",
+      "dyn/vectors\n",
+      "dyn/vector_calculus\n",
+      "dyn/particle_kinetics\n",
+      "dyn/particle_kinematics\n",
+      "sta/introduction\n",
+      "sta/cartesian_coordinates\n",
+      "sta/vectors_scalars\n",
+      "sta/free_body_diagrams\n",
+      "sta/moments\n",
+      "sta/force_systems\n",
+      "sta/reaction_forces\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'extract'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 41\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m script \u001b[38;5;129;01min\u001b[39;00m soup([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscript\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstyle\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnav\u001b[39m\u001b[38;5;124m\"\u001b[39m]):\n\u001b[1;32m     39\u001b[0m     script\u001b[38;5;241m.\u001b[39mextract()    \u001b[38;5;66;03m# rip it out\u001b[39;00m\n\u001b[0;32m---> 41\u001b[0m \u001b[43msoup\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdiv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattrs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mid\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mnav_container\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract\u001b[49m()\n\u001b[1;32m     42\u001b[0m soup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mh1\u001b[39m\u001b[38;5;124m\"\u001b[39m, attrs\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpage_title\u001b[39m\u001b[38;5;124m\"\u001b[39m})\u001b[38;5;241m.\u001b[39mextract()\n\u001b[1;32m     43\u001b[0m soup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdiv\u001b[39m\u001b[38;5;124m\"\u001b[39m, attrs\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtitle_bar\u001b[39m\u001b[38;5;124m\"\u001b[39m})\u001b[38;5;241m.\u001b[39mextract()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'extract'"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -16,6 +52,8 @@
     "    \"sol/material_properties\",\n",
     "    \"sol/axial_loading\",\n",
     "    \"sol/torsion\",\n",
+    "    \"sol/shear_moment_diagrams\",\n",
+    "    \"sol/bending\",\n",
     "    \"dyn/vectors\",\n",
     "    \"dyn/vector_calculus\",\n",
     "    \"dyn/particle_kinetics\",\n",
@@ -23,11 +61,17 @@
     "    \"sta/introduction\",\n",
     "    \"sta/cartesian_coordinates\",\n",
     "    \"sta/vectors_scalars\",\n",
+    "    \"sta/free_body_diagrams\",\n",
+    "    \"sta/moments\",\n",
+    "    \"sta/force_systems\",\n",
+    "    \"sta/reaction_forces\",\n",
+    "    \"sta/internal_forces\",\n",
     "]\n",
     "\n",
     "page_text = []\n",
     "\n",
     "for page in searchable_pages:\n",
+    "    print(page)\n",
     "    url = f\"http://localhost:4321/{page}\"\n",
     "    html = requests.get(url).text\n",
     "\n",
@@ -38,9 +82,20 @@
     "    for script in soup([\"script\", \"style\", \"nav\"]):\n",
     "        script.extract()    # rip it out\n",
     "\n",
-    "    soup.find(\"div\", attrs={\"id\": \"nav_container\"}).extract()\n",
-    "    soup.find(\"h1\", attrs={\"id\": \"page_title\"}).extract()\n",
-    "    soup.find(\"div\", attrs={\"id\": \"title_bar\"}).extract()\n",
+    "    try:\n",
+    "        soup.find(\"div\", attrs={\"id\": \"nav_container\"}).extract()\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "    try:\n",
+    "        soup.find(\"h1\", attrs={\"id\": \"page_title\"}).extract()\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "    try:\n",
+    "        soup.find(\"div\", attrs={\"id\": \"title_bar\"}).extract()\n",
+    "    except:\n",
+    "        pass\n",
     "\n",
     "    # get text\n",
     "    text = soup.get_text()\n",
@@ -97,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
