Changed header to reflect new branding, its 11:11pm

--- a/dev_tools/cbtf.ipynb
+++ b/dev_tools/cbtf.ipynb
@@ -497,6 +497,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "_astro = os.listdir('../dist/_astro')\n",
+    "\n",
+    "css = [c for c in _astro if c[-4:] == '.css']\n",
+    "js = [j for j in _astro if j[-3:] == '.js']\n",
+    "\n",
+    "links_to_replace = {\n",
+    "    \"url(/fonts/source-sans-pro/SourceSansPro-Regular.otf\": \"url(./fonts/source-sans-pro/SourceSansPro-Regular.otf\",\n",
+    "    \"url(/fonts/source-sans-pro/SourceSansPro-Bold.otf\": \"url(./fonts/source-sans-pro/SourceSansPro-Bold.otf\"\n",
+    "}\n",
+    "\n",
+    "for file in css:\n",
+    "    name = os.path.join('../dist/_astro', file)\n",
+    "\n",
+    "    with open(name, 'r') as f:\n",
+    "        data = f.read()\n",
+    "\n",
+    "    for wrong, correct in links_to_replace.items():\n",
+    "        data = data.replace(wrong, correct)\n",
+    "    \n",
+    "    with open(name, 'w') as f:\n",
+    "        f.write(data)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -519,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
