shaded column MOI statics + FINALLY FIXED OVERFLOWING TABLE OMG

--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,8 @@
       "dyn/vector_calculus\n",
       "dyn/particle_kinetics\n",
       "dyn/particle_kinematics\n",
+      "dyn/rigid_body_kinematics\n",
+      "dyn/rigid_body_kinetics\n",
       "sta/introduction\n",
       "sta/cartesian_coordinates\n",
       "sta/vectors_scalars\n",
@@ -48,6 +50,8 @@
     "    \"dyn/vector_calculus\",\n",
     "    \"dyn/particle_kinetics\",\n",
     "    'dyn/particle_kinematics',\n",
+    "    'dyn/rigid_body_kinematics',\n",
+    "    'dyn/rigid_body_kinetics',\n",
     "    \"sta/introduction\",\n",
     "    \"sta/cartesian_coordinates\",\n",
     "    \"sta/vectors_scalars\",\n",
@@ -69,7 +73,7 @@
     "    soup = BeautifulSoup(html, features=\"html.parser\")\n",
     "\n",
     "    # kill all script and style elements\n",
-    "    for script in soup([\"script\", \"style\", \"nav\"]):\n",
+    "    for script in soup([\"script\", \"style\", \"nav\", 'header']):\n",
     "        script.extract()    # rip it out\n",
     "\n",
     "    try:\n",
@@ -142,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
