--- a/create_search_index.ipynb
+++ b/create_search_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,8 @@
       "sol/torsion\n",
       "sol/shear_moment_diagrams\n",
       "sol/bending\n",
+      "sol/transverse_shear\n",
+      "sol/pressure_vessels\n",
       "dyn/vectors\n",
       "dyn/vector_calculus\n",
       "dyn/particle_kinetics\n",
@@ -29,7 +31,10 @@
       "sta/moments\n",
       "sta/force_systems\n",
       "sta/reaction_forces\n",
-      "sta/internal_forces\n"
+      "sta/internal_forces\n",
+      "sta/trusses\n",
+      "sta/frames_and_machines\n",
+      "sta/friction\n"
      ]
     }
    ],
@@ -46,6 +51,8 @@
     "    \"sol/torsion\",\n",
     "    \"sol/shear_moment_diagrams\",\n",
     "    \"sol/bending\",\n",
+    "    \"sol/transverse_shear\",\n",
+    "    \"sol/pressure_vessels\",\n",
     "    \"dyn/vectors\",\n",
     "    \"dyn/vector_calculus\",\n",
     "    \"dyn/particle_kinetics\",\n",
@@ -60,6 +67,9 @@
     "    \"sta/force_systems\",\n",
     "    \"sta/reaction_forces\",\n",
     "    \"sta/internal_forces\",\n",
+    "    \"sta/trusses\",\n",
+    "    \"sta/frames_and_machines\",\n",
+    "    \"sta/friction\",\n",
     "]\n",
     "\n",
     "page_text = []\n",
